Modify Projects Section

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <img src="./img/Logo.svg" alt="Логотип">
         </div>
         <ul class="navlinks">
-            <li><a href="#" class="menu-items">Главная</a></li>
-            <li><a href="#" class="menu-items">Инструменты</a></li>
-            <li><a href="#" class="menu-items">Проекты</a></li>
-            <li><a href="#" class="menu-items">Контакты</a></li>
+            <li><a href="#skills" class="menu-items">Мои навыки</a></li>
+            <li><a href="#education" class="menu-items">Образование</a></li>
+            <li><a href="#experience" class="menu-items">Опыт работы</a></li>
+            <li><a href="#projects" class="menu-items">Проекты</a></li>
         </ul>
         <img src="img/menu.svg" alt="Меню" class="menu-btn">
     </nav>
@@ -41,7 +41,7 @@
                 <p>Я начинающий PHP-разработчик. В настоящее время ищу работу, где смог бы применить на практике свои знания и вырасти до граммотного специалиста.</p>
                 <div class="btn-wrapper">
                     <a href="#projects" class="btn btn-primary">Проекты <img src="img/eye-icon.svg" alt=""></a>
-                    <a href="https://github.com/trolleyfun" class="btn btn-secondary">Github <img src="img/profile-icon.svg" alt=""></a>
+                    <a href="https://github.com/trolleyfun" class="btn btn-secondary" target="_blank">Github <img src="img/profile-icon.svg" alt=""></a>
                 </div>
             </div>
             <!-- /.header-content -->
@@ -92,12 +92,8 @@
         <section id="education">
             <h1>Образование</h1>
             <div class="university">
-                <h1>
-                    Московский физико-технический институт 
-                    
-                </h1>
+                <h1>Московский физико-технический институт</h1>
                 <p>Направление: Прикладная математика и физика, 2020 год</p>
-               
             </div>
             <!-- /.university -->
             <div class="courses-title">
@@ -108,7 +104,7 @@
             <div class="courses-container">
                 <div class="course">
                     <img src="img/php-8.svg" alt="">
-                    <h2>PHP for Beginners</h2>
+                    <h2>PHP for Beginners &ndash; Become a PHP Master &ndash; CMS Project</h2>
                     <p>в процессе изучения</p>
                 </div>
                 <div class="course">
@@ -116,7 +112,7 @@
                     <h2>HTML and CSS in Depth</h2>
                     <p>июнь 2024</p>
                     <div class="certificate">
-                        <a href="docs/HtmlAndCssInDepth.pdf">Сертификат</a>
+                        <a href="docs/HtmlAndCssInDepth.pdf" target="_blank">Сертификат</a>
                         <img src="img/download-primary.svg" alt="" class="download download-primary">
                         <img src="img/download-white.svg" alt="" class="download download-white">
                     </div>
@@ -136,7 +132,7 @@
                     <h2>Introduction to Linux Commands and Shell Scripting</h2>
                     <p>июнь 2024</p>
                     <div class="certificate">
-                        <a href="docs/HandsOnIntroductionToLinuxCommandsAndShellScripting.pdf" download>Сертификат</a>
+                        <a href="docs/HandsOnIntroductionToLinuxCommandsAndShellScripting.pdf" target="_blank">Сертификат</a>
                         <img src="img/download-primary.svg" alt="" class="download download-primary">
                         <img src="img/download-white.svg" alt="" class="download download-white">
                     </div>
@@ -146,7 +142,7 @@
                     <h2>Getting Started with Git and GitHub</h2>
                     <p>май 2024</p>
                     <div class="certificate">
-                        <a href="docs/GettingStartedWithGitAndGithub.pdf" download="11.pdf">Сертификат</a>
+                        <a href="docs/GettingStartedWithGitAndGithub.pdf" target="_blank">Сертификат</a>
                         <img src="img/download-primary.svg" alt="" class="download download-primary">
                         <img src="img/download-white.svg" alt="" class="download download-white">
                     </div>
@@ -156,7 +152,7 @@
                     <h2>Introduction to HTML5</h2>
                     <p>май 2024</p>
                     <div class="certificate">
-                        <a href="docs/IntroductionToHtml5.pdf">Сертификат</a>
+                        <a href="docs/IntroductionToHtml5.pdf" target="_blank">Сертификат</a>
                         <img src="img/download-primary.svg" alt="" class="download download-primary">
                         <img src="img/download-white.svg" alt="" class="download download-white">
                     </div>
@@ -166,7 +162,7 @@
                     <h2>Programming in Python</h2>
                     <p>май 2024</p>
                     <div class="certificate">
-                        <a href="docs/ProgrammingInPython.pdf">Сертификат</a>
+                        <a href="docs/ProgrammingInPython.pdf" target="_blank">Сертификат</a>
                         <img src="img/download-primary.svg" alt="" class="download download-primary">
                         <img src="img/download-white.svg" alt="" class="download download-white">
                     </div>
@@ -176,42 +172,76 @@
         </section>
         <!-- /#education -->
 
+        <section id="experience">
+            <h1>Опыт работы</h1>
+            <div class="job">
+                <h1>Книжный магазин "Планета"</h1>
+                <ul>
+                <li>продавец-консультант, 2021-2023 г.</li>
+                <li>зам. директора магазина, 2023-2024 г.</li>
+                </ul>
+            </div>
+            <!-- /.job -->
+        </section>
+        <!-- /#experience -->
+
         <!-- Projects Section -->
         <section id="projects">
-            <h1>Мои проекты</h1>
-            <p>В моих проектах воплощены самые разные идеи</p>
+            <h1>Проекты</h1>
             <div class="projects-container">
                 <div class="project">
                     <div class="project-content">
-                        <img src="img/project-1.svg" alt="">
-                        <h2>Store</h2>
-                        <p>Сайт магазина одежды</p>
-                    </div>
-                    <div class="btn-wrapper">
-                        <button class="btn btn-primary">Сайт</button>
-                        <button class="btn btn-secondary">Github</button>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-content">
-                        <img src="img/project-2.svg" alt="">
-                        <h2>Сайт-портфолио</h2>
-                        <p>Сайт-портфолио Web-разработчика</p>
-                    </div>
-                    <div class="btn-wrapper">
-                        <button class="btn btn-primary">Сайт</button>
-                        <button class="btn btn-secondary">Github</button>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-content">
-                        <img src="img/project-3.svg" alt="">
+                        <img src="img/BlogWebSite.png" alt="">
                         <h2>Блог о путешествиях</h2>
-                        <p>Блог с различными функциями и разделом администратора</p>
+                        <p>Полученные навыки:</p>
+                        <ul>
+                            <li>наполнение страниц сайта с помощью <b>PHP</b>;</li>
+                            <li>создание базы данных в <b>phpMyAdmin</b>;</li>
+                            <li>работа с <b>HTML</b>-формами, передача данных методами <b>GET</b> и <b>POST</b>;</li>
+                            <li><b>SQL</b>: <b>CRUD</b> запросы, операторы <b>JOIN</b>, <b>GROUP BY</b>, <b>ORDER BY</b>;</li>
+                            <li>аутентификация пользователей, сессии;</li>
+                            <li>предотвращение <b>SQL</b>-вставок, хэширование паролей;</li>
+                            <li>подключение <b>API</b> сторонних сервисов.</li>
+                        </ul>
+                    </div>
+                    <div class="btn-wrapper btn-right">
+                        <a href="https://github.com/trolleyfun/BlogWebSite" class="btn btn-secondary" target="_blank">Github</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-content">
+                        <img src="img/PortfolioWebSite.png" alt="">
+                        <h2>Сайт-портфолио</h2>
+                        <p>Полученные навыки:</p>
+                        <ul>
+                            <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
+                            <li>использование селекторов (теги, классы, id), работа с псевдоклассами;</li>
+                            <li>применение <b>CSS</b>-макетов <b>Flexbox</b> и <b>Grid</b>;</li>
+                            <li>реализация отзывчивого дизайна веб-сайта;</li>
+                            <li>использование выпадающего меню.</li>
+                        </ul>
                     </div>
                     <div class="btn-wrapper">
-                        <button class="btn btn-primary">Сайт</button>
-                        <button class="btn btn-secondary">Github</button>
+                        <a href="https://trolleyfun.github.io/PortfolioWebSite/index.html" class="btn btn-primary" target="_blank">Сайт</a>
+                        <a href="https://github.com/trolleyfun/PortfolioWebSite" class="btn btn-secondary" target="_blank">Github</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-content">
+                        <img src="img/ClothesShopWebSite.png" alt="">
+                        <h2>Магазин одежды</h2>
+                        <p>Полученные навыки:</p>
+                        <ul>
+                            <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
+                            <li>использование селекторов (теги, классы, id), работа с псевдоклассами;</li>
+                            <li>применение <b>CSS</b>-макета <b>Flexbox</b>;</li>
+                            <li>реализация отзывчивого дизайна веб-сайта;</li>
+                            <li>использование выпадающего меню.</li>
+                        </ul>
+                    </div>
+                    <div class="btn-wrapper">
+                        <a href="https://trolleyfun.github.io/ClothesShopWebSite/index.html" class="btn btn-primary" target="_blank">Сайт</a>
+                        <a href="https://github.com/trolleyfun/ClothesShopWebSite" class="btn btn-secondary" target="_blank">Github</a>
                     </div>
                 </div>
             </div>
