Modify Contacts Section and Footer

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     <div class="project-content">
                         <img src="img/BlogWebSite.png" alt="">
                         <h2>Блог о путешествиях</h2>
+                        <p>Используемые технологии: <b>PHP</b>, <b>SQL</b>, <b>HTML</b>, <b>JavaScript</b></p>
                         <p>Полученные навыки:</p>
                         <ul>
                             <li>наполнение страниц сайта с помощью <b>PHP</b>;</li>
@@ -212,6 +213,7 @@
                     <div class="project-content">
                         <img src="img/PortfolioWebSite.png" alt="">
                         <h2>Сайт-портфолио</h2>
+                        <p>Используемые технологии: <b>HTML</b>, <b>CSS</b></p>
                         <p>Полученные навыки:</p>
                         <ul>
                             <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
@@ -230,6 +232,7 @@
                     <div class="project-content">
                         <img src="img/ClothesShopWebSite.png" alt="">
                         <h2>Магазин одежды</h2>
+                        <p>Используемые технологии: <b>HTML</b>, <b>CSS</b></p>
                         <p>Полученные навыки:</p>
                         <ul>
                             <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
@@ -249,45 +252,20 @@
         </section>
         <!-- /#projects -->
 
-        <!-- Contacts Section -->
-        <section id="contacts">
-            <h1>Способы связи</h1>
-            <div class="contacts-container">
-                <div class="social-links">
-                    <p>Есть вопросы? Или заинтересовали мои проекты? Свяжитесь со мной любым удобным способом!</p>
-                    <div class="icons-wrapper">
-                        <img src="img/facebook.svg" alt="Facebook">
-                        <img src="img/dribble.svg" alt="Dribble">
-                        <img src="img/instagram.svg" alt="Instagram">
-                        <img src="img/e-mail.svg" alt="E-mail">
-                    </div>
-                </div>
-                <!-- /.social-links -->
-                <div class="form-wrapper">
-                    <h3>Ваши замечания и предложения</h3>
-                    <input type="text" placeholder="ИМЯ :">
-                    <input type="text" placeholder="EMAIL :">
-                    <textarea rows="10" placeholder="ТЕКСТ :"></textarea>
-                    <button class="btn btn-primary">Отправить</button>
-                </div>
-                <!-- /.form-wrapper -->
-            </div>
+        <!-- About Me Section -->
+        <section id="about-me">
+           <p></p>
         </section>
-        <!-- #contacts -->
+        <!-- #about-me -->
 
         <!-- Footer -->
         <footer>
             <div class="footer-content">
-                <p>&copy; 2024 Pro Programmer</p>
-                <p>Backend-разработчик</p>
-                <p>Отзывчивый дизайн</p>
-                <p>Разработано: Анатолий Гришин</p>
+                <p>&copy; 2024 Анатолий Гришин</p>
+                <a href="https://github.com/trolleyfun" target="_blank">Github</a>
             </div>
             <div class="icons-wrapper">
-                <img src="img/facebook.svg" alt="Facebook">
-                <img src="img/dribble.svg" alt="Dribble">
-                <img src="img/instagram.svg" alt="Instagram">
-                <img src="img/e-mail.svg" alt="E-mail">
+                <a href="https://github.com/trolleyfun" target="_blank"><img src="img/github.svg" alt=""></a>
             </div>
         </footer>
     </div>
