Modify About Me Section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="#education" class="menu-items">Образование</a></li>
             <li><a href="#experience" class="menu-items">Опыт работы</a></li>
             <li><a href="#projects" class="menu-items">Проекты</a></li>
+            <li><a href="#about-me" class="menu-items">Обо мне</a></li>
         </ul>
         <img src="img/menu.svg" alt="Меню" class="menu-btn">
     </nav>
@@ -96,6 +97,7 @@
                 <p>Направление: Прикладная математика и физика, 2020 год</p>
             </div>
             <!-- /.university -->
+            <h2>Дополнительное образование</h2>
             <div class="courses-title">
                 <h1>5+</h1>
                 <p>онлайн-курсов на образовательных платформах <a href="https://coursera.org">coursera.org</a> и <a href="https://udemy.com">udemy.com</a></p>
@@ -211,12 +213,12 @@
                 </div>
                 <div class="project">
                     <div class="project-content">
-                        <img src="img/PortfolioWebSite.png" alt="">
+                        <a href="https://trolleyfun.github.io/PortfolioWebSite/index.html" target="_blank"><img src="img/PortfolioWebSite.png" alt=""></a>
                         <h2>Сайт-портфолио</h2>
                         <p>Используемые технологии: <b>HTML</b>, <b>CSS</b></p>
                         <p>Полученные навыки:</p>
                         <ul>
-                            <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
+                            <li>создание веб-сайта с помощью <b>HTML</b> и <b>CSS</b>;</li>
                             <li>использование селекторов (теги, классы, id), работа с псевдоклассами;</li>
                             <li>применение <b>CSS</b>-макетов <b>Flexbox</b> и <b>Grid</b>;</li>
                             <li>реализация отзывчивого дизайна веб-сайта;</li>
@@ -230,12 +232,12 @@
                 </div>
                 <div class="project">
                     <div class="project-content">
-                        <img src="img/ClothesShopWebSite.png" alt="">
+                        <a href="https://trolleyfun.github.io/ClothesShopWebSite/index.html" target="_blank"><img src="img/ClothesShopWebSite.png" alt=""></a>
                         <h2>Магазин одежды</h2>
                         <p>Используемые технологии: <b>HTML</b>, <b>CSS</b></p>
                         <p>Полученные навыки:</p>
                         <ul>
-                            <li>создание веб-страницы с помощью <b>HTML</b> и <b>CSS</b>;</li>
+                            <li>создание веб-сайта с помощью <b>HTML</b> и <b>CSS</b>;</li>
                             <li>использование селекторов (теги, классы, id), работа с псевдоклассами;</li>
                             <li>применение <b>CSS</b>-макета <b>Flexbox</b>;</li>
                             <li>реализация отзывчивого дизайна веб-сайта;</li>
@@ -254,7 +256,12 @@
 
         <!-- About Me Section -->
         <section id="about-me">
-           <p></p>
+            <h1>Обо мне</h1>
+            <p>Я начинающий PHP-разработчик.</p>
+            <p>Свои первые навыки в области программирования я получил в институте, который окончил 4 года назад. С апреля этого года начал активно изучать PHP, а также другие инструменты веб-программирования. Важной частью обучения считаю практику, поэтому отрабатываю все изученные технологии на учебных проектах и ищу работу, где мог бы получить опыт участия в коммерческих проектах.</p>
+            <p>Я всегда любил работать с базами данных, и в школьном возрасте составлял базу данных троллейбусов своего города. Также мне важно, чтобы у результата моей работы была визуальная составляющая. Поэтому я остановил свой выбор на backend-разработке.</p>
+            <p>В своей работе я особо ценю аккуратный и понятный код. Большое внимание уделяю проверке корректной работы программы в различных условиях. Быстро осваиваю новые технологии, отвественно отношусь к своей работе и выполняю её в срок. Владею техническим английским.</p>
+            <p>Свободное время люблю проводить на природе. Катаюсь на велосипеде. Изучаю японский язык и мечтаю побеседовать с настоящим японцем в настоящей Японии :)</p>
         </section>
         <!-- #about-me -->
 
