--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
             <div class="job">
                 <h1>Книжный магазин "Планета"</h1>
                 <ul>
-                <li>продавец-консультант, 2021-2023 г.</li>
-                <li>зам. директора магазина, 2023-2024 г.</li>
+                    <li>зам. директора магазина, 2023-2024 г.</li>
+                    <li>продавец-консультант, 2021-2023 г.</li>
                 </ul>
             </div>
             <!-- /.job -->
@@ -193,7 +193,7 @@
             <div class="projects-container">
                 <div class="project">
                     <div class="project-content">
-                        <img src="img/BlogWebSite.png" alt="">
+                        <a href="https://github.com/trolleyfun/BlogWebSite" target="_blank"><img src="img/BlogWebSite.png" alt=""></a>
                         <h2>Блог о путешествиях</h2>
                         <p>Используемые технологии: <b>PHP</b>, <b>SQL</b>, <b>HTML</b>, <b>JavaScript</b></p>
                         <p>Полученные навыки:</p>
