Fix links to coursera and udemy

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2>Дополнительное образование</h2>
             <div class="courses-title">
                 <h1>5+</h1>
-                <p>онлайн-курсов на образовательных платформах <a href="https://coursera.org">coursera.org</a> и <a href="https://udemy.com">udemy.com</a></p>
+                <p>онлайн-курсов на образовательных платформах <a href="https://coursera.org" target="_blank">coursera.org</a> и <a href="https://udemy.com" target="_blank">udemy.com</a></p>
             </div>
             <!-- /.courses-title -->
             <div class="courses-container">
