Add github icon

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <a href="https://github.com/trolleyfun" target="_blank">Github</a>
             </div>
             <div class="icons-wrapper">
-                <a href="https://github.com/trolleyfun" target="_blank"><img src="img/github.svg" alt=""></a>
+                <a href="https://github.com/trolleyfun" target="_blank"><img src="img/github-primary.svg" alt=""></a>
             </div>
         </footer>
     </div>
