Modify About Me text

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
         <section id="about-me">
             <h1>Обо мне</h1>
             <p>Я начинающий PHP-разработчик.</p>
-            <p>Свои первые навыки в области программирования я получил в институте, который окончил 4 года назад. С апреля этого года начал активно изучать PHP, а также другие инструменты веб-программирования. Важной частью обучения считаю практику, поэтому отрабатываю все изученные технологии на учебных проектах и ищу работу, где мог бы получить опыт участия в коммерческих проектах.</p>
+            <p>Свои первые навыки в области программирования я получил в институте, который окончил 4 года назад. С апреля этого года начал активно изучать PHP, а также другие инструменты веб-программирования. Важной частью обучения считаю практику, поэтому применяю все изученные технологии в учебных проектах и ищу работу, где смог бы поучаствовать в коммерческой разработке.</p>
             <p>Я всегда любил работать с базами данных, и в школьном возрасте составлял базу данных троллейбусов своего города. Также мне важно, чтобы у результата моей работы была визуальная составляющая. Поэтому я остановил свой выбор на backend-разработке.</p>
-            <p>В своей работе я особо ценю аккуратный и понятный код. Большое внимание уделяю проверке корректной работы программы в различных условиях. Быстро осваиваю новые технологии, отвественно отношусь к своей работе и выполняю её в срок. Владею техническим английским.</p>
+            <p>В своей работе я особо ценю аккуратный и понятный код. Большое внимание уделяю проверке корректной работы программы в различных условиях, при различных входных данных. Быстро осваиваю новые технологии, отвественно отношусь к своей работе и выполняю её в срок. Владею техническим английским.</p>
             <p>Свободное время люблю проводить на природе. Катаюсь на велосипеде. Изучаю японский язык и мечтаю побеседовать с настоящим японцем в настоящей Японии :)</p>
         </section>
         <!-- #about-me -->
