Modify Experience Section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h2>Здравствуйте! Меня зовут</h2>
                 <h1>Анатолий Гришин</h1>
                 <h3>Мне 28 лет</h3>
-                <p>Я начинающий PHP-разработчик. В настоящее время ищу работу, где смог бы применить на практике свои знания и вырасти до граммотного специалиста.</p>
+                <p>Я начинающий PHP-разработчик. В настоящее время ищу работу, где смог бы применить на практике свои знания и развить профессиональные навыки.</p>
                 <div class="btn-wrapper">
                     <a href="#projects" class="btn btn-primary">Проекты <img src="img/eye-icon.svg" alt=""></a>
                     <a href="https://github.com/trolleyfun" class="btn btn-secondary" target="_blank">Github <img src="img/profile-icon.svg" alt=""></a>
@@ -176,14 +176,24 @@
 
         <section id="experience">
             <h1>Опыт работы</h1>
-            <div class="job">
-                <h1>Книжный магазин "Планета"</h1>
-                <ul>
-                    <li>зам. директора магазина, 2023-2024 г.</li>
-                    <li>продавец-консультант, 2021-2023 г.</li>
-                </ul>
+            <div class="job-container">
+                <div class="job">
+                    <h1>Книжный магазин "Планета"</h1>
+                    <p>г. Уфа</p>
+                    <ul>
+                        <li>зам. директора магазина, 2023-2024 г.</li>
+                        <li>продавец-консультант, 2021-2023 г.</li>
+                    </ul>
+                </div>
+                <div class="job">
+                    <h1>ПАО "Радиофизика"</h1>
+                    <p>г. Москва</p>
+                    <ul>
+                        <li>программист, 2018-2020 г.</li>
+                    </ul>
+                </div>
             </div>
-            <!-- /.job -->
+            <!-- /.job-container -->
         </section>
         <!-- /#experience -->
 
@@ -258,9 +268,9 @@
         <section id="about-me">
             <h1>Обо мне</h1>
             <p>Я начинающий PHP-разработчик.</p>
-            <p>Свои первые навыки в области программирования я получил в институте, который окончил 4 года назад. С апреля этого года начал активно изучать PHP, а также другие инструменты веб-программирования. Важной частью обучения считаю практику, поэтому применяю все изученные технологии в учебных проектах и ищу работу, где смог бы поучаствовать в коммерческой разработке.</p>
-            <p>Я всегда любил работать с базами данных, и в школьном возрасте составлял базу данных троллейбусов своего города. Также мне важно, чтобы у результата моей работы была визуальная составляющая. Поэтому я остановил свой выбор на backend-разработке.</p>
-            <p>В своей работе я особо ценю аккуратный и понятный код. Большое внимание уделяю проверке корректной работы программы в различных условиях, при различных входных данных. Быстро осваиваю новые технологии, отвественно отношусь к своей работе и выполняю её в срок. Владею техническим английским.</p>
+            <p>Свои первые навыки в области программирования я получил в институте, который окончил 4 года назад. С весны этого года начал активно изучать PHP и другие инструменты веб-программирования. Важной частью обучения считаю практику, поэтому применяю все изученные технологии в учебных проектах и ищу работу, где смог бы поучаствовать в коммерческой разработке.</p>
+            <p>Я всегда любил работать с базами данных, и в школьном возрасте составил базу данных троллейбусов своего города. Мне нравится создавать веб-приложения, потому что их просматривают миллионы людей по всему миру, и без них трудно представить нашу жизнь.</p>
+            <p>В своих проектах я ценю аккуратный и понятный код. Большое внимание уделяю проверке корректной работы программы в различных условиях, при различных входных данных. Быстро осваиваю новые технологии, отвественно отношусь к своей работе и выполняю её в срок. Владею техническим английским.</p>
             <p>Свободное время люблю проводить на природе. Катаюсь на велосипеде. Изучаю японский язык и мечтаю побеседовать с настоящим японцем в настоящей Японии :)</p>
         </section>
         <!-- #about-me -->
