Add link to project

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="projects-container">
                 <div class="project">
                     <div class="project-content">
-                        <a href="https://github.com/trolleyfun/BlogWebSite" target="_blank"><img src="img/BlogWebSite.png" alt=""></a>
+                        <a href="https://blogwebsite.h1n.ru/" target="_blank"><img src="img/BlogWebSite.png" alt=""></a>
                         <h2>Блог о путешествиях</h2>
                         <p>Используемые технологии: <b>PHP</b>, <b>SQL</b>, <b>HTML</b>, <b>JavaScript</b></p>
                         <p>Полученные навыки:</p>
@@ -217,7 +217,8 @@
                             <li>подключение <b>API</b> сторонних сервисов.</li>
                         </ul>
                     </div>
-                    <div class="btn-wrapper btn-right">
+                    <div class="btn-wrapper">
+                        <a href="https://blogwebsite.h1n.ru/" class="btn btn-primary" target="_blank">Сайт</a>
                         <a href="https://github.com/trolleyfun/BlogWebSite" class="btn btn-secondary" target="_blank">Github</a>
                     </div>
                 </div>
